--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,5 @@
     <dimen name="cards_pack_list_size">480dp</dimen>
     <dimen name="share_view">240dp</dimen>
     <dimen name="button_corner_radius">24dp</dimen>
+    <dimen name="user_picture_size">96dp</dimen>
 </resources>
